--- a/application/resources/views/_layout/main.twig
+++ b/application/resources/views/_layout/main.twig
@@ -136,7 +136,7 @@
 
       {# Stylesheets #}
       {# <link rel="stylesheet" href="{{ asset.path('/assets/web/app.css') }}"> #}
-      <style>{{ asset.source(['/assets/web/app.css']) }}</style>
+      <style>{{ asset.source(['/assets/web/bundle.css']) }}</style>
       {% block styles %}{% endblock %}
 
       <!--[if lt IE 9]
@@ -144,7 +144,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
       <![endif]-->
     </head>
-    <body>
+    <body data-theme="light">
       {# Content #}
       {% block content %}{% endblock %}
 
@@ -158,8 +158,8 @@
       {# <script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
       <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script> #}
 
-      <script>{{ asset.source(['/assets/web/app.js'])|raw }}</script>
-      {# <script src="{{ asset.path('/assets/web/app.js') }}"></script> #}
+      <script>{{ asset.source(['/assets/web/bundle.js'])|raw }}</script>
+      {# <script src="{{ asset.path('/assets/web/bundle.js') }}"></script> #}
       {% block scripts %}{% endblock %}
     </body>
   </html>
