--- a/application/resources/views/_layout/main.twig
+++ b/application/resources/views/_layout/main.twig
@@ -1,172 +1,171 @@
-<!DOCTYPE html>
-<html lang="pt-br" itemscope itemtype="https://schema.org/WebSite">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
-    >
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="theme-color" content="#6272a4">
-    {# <meta name="_csrfToken" content="{{ csrf_token(false)|raw }}"> #}
+{% apply spaceless %}
+  <!DOCTYPE html>
+  <html lang="pt-br" itemscope itemtype="https://schema.org/WebSite">
+    <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+      <meta name="theme-color" content="#6272a4">
+      {# <meta name="_csrfToken" content="{{ csrf_token(false)|raw }}"> #}
 
-    {# Metas tags #}
-    {% set titleApp = (title ? title~' | '~config.get('client.name') : config.get('client.name')~(config.get('client.slogan') ? ' | '~config.get('client.slogan') : null)) %}
+      {# Metas tags #}
+      {% set titleApp = (title ? title~' | '~config.get('client.name') : config.get('client.name')~(config.get('client.slogan') ? ' | '~config.get('client.slogan') : null)) %}
 
-    {# Monta image #}
-    {% if image %}
-      {% if not 'http://' in image or not 'https://' in image %}
-        {% set image = asset.path(image, true) %}
+      {# Monta image #}
+      {% if image %}
+        {% if not 'http://' in image or not 'https://' in image %}
+          {% set image = asset.path(image, true) %}
+        {% endif %}
+      {% else %}
+        {% set image = asset.path('/assets/images/1200x630.png', true) %}
       {% endif %}
-    {% else %}
-      {% set image = asset.path('/assets/images/1200x630.png', true) %}
-    {% endif %}
 
-    <title>{{ titleApp }}</title>
+      <title>{{ titleApp }}</title>
 
-    {# Meta TAGS Padrão #}
-    {% if description or config.get('client.description') %}
-      <meta name="description" content="{{ description ?: config.get('client.description') }}" />
-    {% endif %}
+      {# Meta TAGS Padrão #}
+      {% if description or config.get('client.description') %}
+        <meta name="description" content="{{ description ?: config.get('client.description') }}" />
+      {% endif %}
 
-    {% if abstract or config.get('client.abstract') %}
-      <meta name="abstract" content="{{ abstract ?: config.get('client.abstract') }}" />
-    {% endif %}
+      {% if abstract or config.get('client.abstract') %}
+        <meta name="abstract" content="{{ abstract ?: config.get('client.abstract') }}" />
+      {% endif %}
 
-    {% if keywords or config.get('client.keywords') %}
-      <meta name="keywords" content="{{ keywords ?: config.get('client.keywords') }}" />
-    {% endif %}
+      {% if keywords or config.get('client.keywords') %}
+        <meta name="keywords" content="{{ keywords ?: config.get('client.keywords') }}" />
+      {% endif %}
 
-    <meta name="robots" content="index, follow" />
+      <meta name="robots" content="index, follow" />
 
-    {# Link site #}
-    <link rel="base" href="{{ constant('BASE_URL') }}" />
-    <link rel="canonical" href="{{ constant('FULL_URL') }}" />
+      {# Link site #}
+      <link rel="base" href="{{ constant('BASE_URL') }}" />
+      <link rel="canonical" href="{{ constant('FULL_URL') }}" />
 
-    {# Manifest #}
-    <link rel="manifest" href="{{ asset.path('/manifest.json') }}" />
+      {# Manifest #}
+      <link rel="manifest" href="{{ asset.path('/manifest.json') }}" />
 
-    {# RSS e SiteMAP #}
-    {# <link rel="alternate" type="application/rss+xml" href="{{ constant('BASE_URL') }}/rss"/>
+      {# RSS e SiteMAP #}
+      {# <link rel="alternate" type="application/rss+xml" href="{{ constant('BASE_URL') }}/rss"/>
       <link rel="sitemap" type="application/xml" href="{{ constant('BASE_URL') }}/sitemap.xml"/> #}
 
-    {# Google PLUS #}
-    {% if config.get('client.google.authorId') %}
-      <link
-        rel="author"
-        href="https://plus.google.com/{{ config.get('client.google.authorId') }}/posts"
-      />
-    {% endif %}
+      {# Google PLUS #}
+      {% if config.get('client.google.authorId') %}
+        <link
+          rel="author"
+          href="https://plus.google.com/{{ config.get('client.google.authorId') }}/posts"
+        />
+      {% endif %}
 
-    {% if config.get('client.google.pageId') %}
-      <link rel="publisher" href="https://plus.google.com/{{ config.get('client.google.pageId') }}" />
-    {% endif %}
+      {% if config.get('client.google.pageId') %}
+        <link rel="publisher" href="https://plus.google.com/{{ config.get('client.google.pageId') }}" />
+      {% endif %}
 
-    {# Meta TAGS Google #}
-    <meta itemprop="name" content="{{ titleApp }}" />
+      {# Meta TAGS Google #}
+      <meta itemprop="name" content="{{ titleApp }}" />
 
-    {% if description or config.get('client.description') %}
-      <meta itemprop="description" content="{{ description ?: config.get('client.description') }}" />
-    {% endif %}
+      {% if description or config.get('client.description') %}
+        <meta itemprop="description" content="{{ description ?: config.get('client.description') }}" />
+      {% endif %}
 
-    <meta itemprop="image" content="{{ image|raw }}" />
-    <meta itemprop="url" content="{{ constant('FULL_URL') }}" />
+      <meta itemprop="image" content="{{ image|raw }}" />
+      <meta itemprop="url" content="{{ constant('FULL_URL') }}" />
 
-    {# Meta TAGS Facebook #}
-    <meta property="og:type" content="{{ type ?: 'website' }}" />
-    <meta property="og:title" content="{{ titleApp }}" />
+      {# Meta TAGS Facebook #}
+      <meta property="og:type" content="{{ type ?: 'website' }}" />
+      <meta property="og:title" content="{{ titleApp }}" />
 
-    {% if description or config.get('client.description') %}
-      <meta property="og:description" content="{{ description ?: config.get('client.description') }}" />
-    {% endif %}
+      {% if description or config.get('client.description') %}
+        <meta property="og:description" content="{{ description ?: config.get('client.description') }}" />
+      {% endif %}
 
-    <meta property="og:image" content="{{ image|raw }}" />
-    <meta property="og:url" content="{{ constant('FULL_URL') }}" />
+      <meta property="og:image" content="{{ image|raw }}" />
+      <meta property="og:url" content="{{ constant('FULL_URL') }}" />
 
-    {% if config.get('client.name') %}
-      <meta property="og:site_name" content="{{ config.get('client.name') }}" />
-    {% endif %}
+      {% if config.get('client.name') %}
+        <meta property="og:site_name" content="{{ config.get('client.name') }}" />
+      {% endif %}
 
-    <meta property="og:locale" content="pt_BR" />
+      <meta property="og:locale" content="pt_BR" />
 
-    {% if config.get('client.facebook.authorName') %}
-      <meta
-        property="article:author"
-        content="https://www.facebook.com/{{ config.get('client.facebook.authorName') }}"
-      />
-    {% endif %}
+      {% if config.get('client.facebook.authorName') %}
+        <meta
+          property="article:author"
+          content="https://www.facebook.com/{{ config.get('client.facebook.authorName') }}"
+        />
+      {% endif %}
 
-    {% if config.get('client.facebook.pageName') %}
-      <meta
-        property="article:publisher"
-        content="https://www.facebook.com/{{ config.get('client.facebook.pageName') }}"
-      />
-    {% endif %}
+      {% if config.get('client.facebook.pageName') %}
+        <meta
+          property="article:publisher"
+          content="https://www.facebook.com/{{ config.get('client.facebook.pageName') }}"
+        />
+      {% endif %}
 
-    {% if config.get('client.facebook.appId') %}
-      <meta property="fb:app_id" content="{{ config.get('client.facebook.appId') }}" />
-    {% endif %}
+      {% if config.get('client.facebook.appId') %}
+        <meta property="fb:app_id" content="{{ config.get('client.facebook.appId') }}" />
+      {% endif %}
 
-    {% if config.get('client.facebook.pageId') %}
-      <meta property="fb:pages" content="{{ config.get('client.facebook.pageId') }}" />
-    {% endif %}
+      {% if config.get('client.facebook.pageId') %}
+        <meta property="fb:pages" content="{{ config.get('client.facebook.pageId') }}" />
+      {% endif %}
 
-    {# Meta TAGS Twitter #}
-    <meta property="twitter:card" content="summary_large_image" />
+      {# Meta TAGS Twitter #}
+      <meta property="twitter:card" content="summary_large_image" />
 
-    {% if config.get('client.twitter.name') %}
-      <meta property="twitter:site" content="@{{ config.get('client.twitter.name') }}" />
-      <meta property="twitter:creator" content="@vcwebnetworks" />
-    {% endif %}
+      {% if config.get('client.twitter.name') %}
+        <meta property="twitter:site" content="@{{ config.get('client.twitter.name') }}" />
+        <meta property="twitter:creator" content="@vcwebnetworks" />
+      {% endif %}
 
-    <meta property="twitter:title" content="{{ titleApp }}" />
+      <meta property="twitter:title" content="{{ titleApp }}" />
 
-    {% if description or config.get('client.description') %}
-      <meta property="twitter:description" content="{{ description ?: config.get('client.description') }}" />
-    {% endif %}
+      {% if description or config.get('client.description') %}
+        <meta property="twitter:description" content="{{ description ?: config.get('client.description') }}" />
+      {% endif %}
 
-    <meta property="twitter:image" content="{{ image|raw }}" />
-    <meta property="twitter:url" content="{{ constant('FULL_URL') }}" />
-    <meta property="twitter:domain" content="{{ constant('BASE_URL') }}" />
+      <meta property="twitter:image" content="{{ image|raw }}" />
+      <meta property="twitter:url" content="{{ constant('FULL_URL') }}" />
+      <meta property="twitter:domain" content="{{ constant('BASE_URL') }}" />
 
-    {# Favicon #}
-    <link rel="shortcut icon" type="image/png" href="{{ asset.path('/assets/icons/icon-32x32.png', true) }}">
+      {# Favicon #}
+      <link rel="shortcut icon" type="image/png" href="{{ asset.path('/assets/icons/icon-32x32.png', true) }}">
 
-    {# Stylesheets #}
-    <link rel="stylesheet" href="{{ asset.path('/assets/web/bundle.css') }}">
-    {# <style>{{ asset.source(['/assets/web/bundle.css'])|raw }}</style> #}
-    {% block styles %}{% endblock %}
+      {# Stylesheets #}
+      <link rel="stylesheet" href="{{ asset.path('/assets/web/bundle.css') }}">
+      {# <style>{{ asset.source(['/assets/web/bundle.css'])|raw }}</style> #}
+      {% block styles %}{% endblock %}
 
-    <!--[if lt IE 9]
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+      <!--[if lt IE 9]
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
+      <![endif]-->
 
-    <script>
-      window.addEventListener('load', () => {
-        if ('serviceWorker' in navigator) {
-          navigator.serviceWorker.register('/static/service-worker.js');
-        }
-      });
-    </script>
-  </head>
-  <body data-theme="light">
-    {# Content #}
-    {% block content %}{% endblock %}
+      <script>
+        window.addEventListener('load', () => {
+          if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('/static/service-worker.js');
+          }
+        });
+      </script>
+    </head>
+    <body data-theme="light">
+      {# Content #}
+      {% block content %}{% endblock %}
 
-    {# Scripts #}
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.min.js"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-      crossorigin="anonymous"
-    ></script>
+      {# Scripts #}
+      <script
+        src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+        crossorigin="anonymous"
+      ></script>
 
-    {# <script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
+      {# <script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
       <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script> #}
 
-    {# <script>{{ asset.source(['/assets/web/bundle.js'])|raw }}</script> #}
-    <script src="{{ asset.path('/assets/web/bundle.js') }}"></script>
-    {% block scripts %}{% endblock %}
-  </body>
-</html>
+      {# <script>{{ asset.source(['/assets/web/bundle.js'])|raw }}</script> #}
+      <script src="{{ asset.path('/assets/web/bundle.js') }}"></script>
+      {% block scripts %}{% endblock %}
+    </body>
+  </html>
+{% endapply %}
