feat: new functionality and optimizations and fixes error returns in json/html
Signed-off-by: Vagner Cardoso <vagnercardosoweb@gmail.com>

--- a/application/resources/assets/src/nodesass/error.scss
+++ b/application/resources/assets/src/nodesass/error.scss
@@ -29,7 +29,9 @@
     margin: auto;
     word-break: break-all;
     border-radius: 4px;
-    box-shadow: 0 10px 20px darken(#ffffff, 5), 0 -5px 20px darken(#ffffff, 5);
+    box-shadow:
+      0 10px 20px darken(#ffffff, 5),
+      0 -5px 20px darken(#ffffff, 5);
 
     .header {
       padding: 15px;
