--- a/application/resources/errors/405.twig
+++ b/application/resources/errors/405.twig
@@ -6,7 +6,7 @@
   <div class="error-404 error-405">
     <div class="content">
       <h1>Método HTTP ({{ method|raw }}) não aceito.</h1>
-      <p>São aceito apenas os métodos <b>({{ methods|raw }})</b> nessa requisição.</p>
+      <p>São aceitos apenas os métodos <b>({{ methods|raw }})</b> nessa requisição.</p>
       <a href="{{ constant('BASE_URL') }}">Voltar</a>
     </div>
   </div>
