--- a/application/resources/views/layout/main.twig
+++ b/application/resources/views/layout/main.twig
@@ -1,12 +1,16 @@
 {% apply spaceless %}
   <!DOCTYPE html>
-  <html lang="pt-br" itemscope itemtype="https://schema.org/WebSite">
+  <html lang="pt-br">
     <head>
       <meta charset="UTF-8">
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-      <meta name="theme-color" content="#6272a4">
+
+      {% if config.get('client.themeColor') %}
+        <meta name="theme-color" content="{{ config.get('client.themeColor') }}">
+      {% endif %}
+
       {# <meta name="_csrfToken" content="{{ csrf_token(false)|raw }}"> #}
 
       {# Metas tags #}
@@ -25,25 +29,25 @@
 
       {# Meta TAGS Padrão #}
       {% if description or config.get('client.description') %}
-        <meta name="description" content="{{ description ?: config.get('client.description') }}" />
+        <meta name="description" content="{{ description ?: config.get('client.description') }}"/>
       {% endif %}
 
       {% if abstract or config.get('client.abstract') %}
-        <meta name="abstract" content="{{ abstract ?: config.get('client.abstract') }}" />
+        <meta name="abstract" content="{{ abstract ?: config.get('client.abstract') }}"/>
       {% endif %}
 
       {% if keywords or config.get('client.keywords') %}
-        <meta name="keywords" content="{{ keywords ?: config.get('client.keywords') }}" />
+        <meta name="keywords" content="{{ keywords ?: config.get('client.keywords') }}"/>
       {% endif %}
 
-      <meta name="robots" content="index, follow" />
+      <meta name="robots" content="index, follow"/>
 
       {# Link site #}
-      <link rel="base" href="{{ constant('BASE_URL') }}" />
-      <link rel="canonical" href="{{ constant('FULL_URL') }}" />
+      <link rel="base" href="{{ constant('BASE_URL') }}"/>
+      <link rel="canonical" href="{{ constant('FULL_URL') }}"/>
 
       {# Manifest #}
-      <link rel="manifest" href="{{ asset.path('/manifest.json') }}" />
+      <link rel="manifest" href="{{ asset.path('/manifest.json') }}"/>
 
       {# RSS e SiteMAP #}
       {# <link rel="alternate" type="application/rss+xml" href="{{ constant('BASE_URL') }}/rss"/>
@@ -58,35 +62,44 @@
       {% endif %}
 
       {% if config.get('client.google.pageId') %}
-        <link rel="publisher" href="https://plus.google.com/{{ config.get('client.google.pageId') }}" />
+        <link
+          rel="publisher"
+          href="https://plus.google.com/{{ config.get('client.google.pageId') }}"
+        />
       {% endif %}
 
       {# Meta TAGS Google #}
-      <meta itemprop="name" content="{{ titleApp }}" />
+      <meta itemprop="name" content="{{ titleApp }}"/>
 
       {% if description or config.get('client.description') %}
-        <meta itemprop="description" content="{{ description ?: config.get('client.description') }}" />
+        <meta
+          itemprop="description"
+          content="{{ description ?: config.get('client.description') }}"
+        />
       {% endif %}
 
-      <meta itemprop="image" content="{{ image|raw }}" />
-      <meta itemprop="url" content="{{ constant('FULL_URL') }}" />
+      <meta itemprop="image" content="{{ image|raw }}"/>
+      <meta itemprop="url" content="{{ constant('FULL_URL') }}"/>
 
       {# Meta TAGS Facebook #}
-      <meta property="og:type" content="{{ type ?: 'website' }}" />
-      <meta property="og:title" content="{{ titleApp }}" />
+      <meta property="og:type" content="{{ type ?: 'website' }}"/>
+      <meta property="og:title" content="{{ titleApp }}"/>
 
       {% if description or config.get('client.description') %}
-        <meta property="og:description" content="{{ description ?: config.get('client.description') }}" />
+        <meta
+          property="og:description"
+          content="{{ description ?: config.get('client.description') }}"
+        />
       {% endif %}
 
-      <meta property="og:image" content="{{ image|raw }}" />
-      <meta property="og:url" content="{{ constant('FULL_URL') }}" />
+      <meta property="og:image" content="{{ image|raw }}"/>
+      <meta property="og:url" content="{{ constant('FULL_URL') }}"/>
 
       {% if config.get('client.name') %}
-        <meta property="og:site_name" content="{{ config.get('client.name') }}" />
+        <meta property="og:site_name" content="{{ config.get('client.name') }}"/>
       {% endif %}
 
-      <meta property="og:locale" content="pt_BR" />
+      <meta property="og:locale" content="pt_BR"/>
 
       {% if config.get('client.facebook.authorName') %}
         <meta
@@ -103,33 +116,40 @@
       {% endif %}
 
       {% if config.get('client.facebook.appId') %}
-        <meta property="fb:app_id" content="{{ config.get('client.facebook.appId') }}" />
+        <meta property="fb:app_id" content="{{ config.get('client.facebook.appId') }}"/>
       {% endif %}
 
       {% if config.get('client.facebook.pageId') %}
-        <meta property="fb:pages" content="{{ config.get('client.facebook.pageId') }}" />
+        <meta property="fb:pages" content="{{ config.get('client.facebook.pageId') }}"/>
       {% endif %}
 
       {# Meta TAGS Twitter #}
-      <meta property="twitter:card" content="summary_large_image" />
+      <meta property="twitter:card" content="summary_large_image"/>
 
       {% if config.get('client.twitter.name') %}
-        <meta property="twitter:site" content="@{{ config.get('client.twitter.name') }}" />
-        <meta property="twitter:creator" content="@vcwebnetworks" />
+        <meta property="twitter:site" content="@{{ config.get('client.twitter.name') }}"/>
+        <meta property="twitter:creator" content="@vcwebnetworks"/>
       {% endif %}
 
-      <meta property="twitter:title" content="{{ titleApp }}" />
+      <meta property="twitter:title" content="{{ titleApp }}"/>
 
       {% if description or config.get('client.description') %}
-        <meta property="twitter:description" content="{{ description ?: config.get('client.description') }}" />
+        <meta
+          property="twitter:description"
+          content="{{ description ?: config.get('client.description') }}"
+        />
       {% endif %}
 
-      <meta property="twitter:image" content="{{ image|raw }}" />
-      <meta property="twitter:url" content="{{ constant('FULL_URL') }}" />
-      <meta property="twitter:domain" content="{{ constant('BASE_URL') }}" />
+      <meta property="twitter:image" content="{{ image|raw }}"/>
+      <meta property="twitter:url" content="{{ constant('FULL_URL') }}"/>
+      <meta property="twitter:domain" content="{{ constant('BASE_URL') }}"/>
 
       {# Favicon #}
-      <link rel="shortcut icon" type="image/png" href="{{ asset.path('/assets/icons/icon-32x32.png', true) }}">
+      <link
+        rel="shortcut icon"
+        type="image/png"
+        href="{{ asset.path('/assets/icons/icon-32x32.png', true) }}"
+      >
 
       {# Stylesheets #}
       <link rel="stylesheet" href="{{ asset.path('/assets/web/bundle.css') }}">
@@ -155,13 +175,24 @@
 
       {# Scripts #}
       <script
-        src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+        src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
         crossorigin="anonymous"
       ></script>
 
-      {# <script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
-      <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script> #}
+      {# <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/react/18.2.0/umd/react.production.min.js"
+        integrity="sha512-8Q6Y9XnTbOE+JNvjBQwJ2H8S+UV4uA6hiRykhdtIyDYZ2TprdNmWOUaKdGzOhyr4dCyk287OejbPvwl7lrfqrQ=="
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer"
+      ></script>
+
+      <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.2.0/umd/react-dom.production.min.js"
+        integrity="sha512-MOCpqoRoisCTwJ8vQQiciZv0qcpROCidek3GTFS6KTk2+y7munJIlKCVkFCYY+p3ErYFXCjmFjnfTTRSC1OHWQ=="
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer"
+      ></script> #}
 
       {# <script>{{ asset.source(['/assets/web/bundle.js'])|raw }}</script> #}
       <script src="{{ asset.path('/assets/web/bundle.js') }}"></script>
